index.html on root

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
-  <link href="index.css" rel="stylesheet">
+  <link href="./dist/index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <p>Lives remaining:  <span> 3 </span> </p>
   </section>
 
-  <script src="./bundle.js"></script>
+  <script src="./dist/bundle.js"></script>
 </body>
 
 </html>
